--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Proyecto pruebas</title>
+  <title>Documentación Blanca/Javi</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/icon-152x152.png">
+  <meta name="theme-color" content="#575757">
 </head>
 <body>
   <app-root></app-root>
