--- a/documentation/index.html
+++ b/documentation/index.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 	      <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/readthedocs.css">
     </head>
     <body>
 
@@ -56,28 +57,28 @@
 <p>Estan habilitados todos los polyfills necesarios para que la PWA funcione en IE.</p>
 <p>Para poder iniciar la aplicacion en Internet Explorer es necesario ejecutarla en ECMAScript 5 (ES5) mediante el comando:</p>
 <div><pre class="line-numbers"><code class="language-none">ng serve --configuration es5</code></pre></div><h2 id="compilar-y-subir-a-web-site">Compilar y subir a Web Site</h2>
-<img src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/githubpageslogo.png?raw=true" data-canonical-src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/githubpageslogo.png?raw=true" alt="GitHub Pages" title="GitHub Pages" width="100"/>
-
+<p><a href="https://pages.github.com/"><img src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/githubpageslogo.png?raw=true" data-canonical-src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/githubpageslogo.png?raw=true" alt="GitHub Pages" title="GitHub Pages" width="100"/></a></p>
 <p>Para poder realizar la subida y despliegue de la aplicación en la ruta <a href="https://javiggpecas.github.io/documentacionBlancaJavi">DocumentacionBlancaJavi</a> es necesario modificar el archivo <code>manifest.webmanifest</code> y modificar 
 <code>&quot;start_url&quot;: &quot;/&quot;,</code> resultando <code>&quot;start_url&quot;: &quot;/documentacionBlancaJavi/&quot;,</code> .</p>
 <p>A continuacón se compila el proyecto Angular mediante el comando:</p>
 <div><pre class="line-numbers"><code class="language-none">ng build --prod --base-href=&quot;#&quot;</code></pre></div><p>Para realizar la subida a la rama que contiene el proyecto compilado (<code>gh-pages</code>) y realizar el despliegue es necesario tener instalado <code>angular-cli-ghpages</code> con el siguiete comando</p>
 <div><pre class="line-numbers"><code class="language-none">npm install -g angular-cli-ghpages</code></pre></div><p>Entonces se sube el compilado a la rama con el soguiente comando:</p>
 <div><pre class="line-numbers"><code class="language-none">ngh --dir=dist/documentacion-blanca-javi</code></pre></div><p>Para ver el estado del despliegue se tiene que estar en la pagina de github del proyecto en la pestaña <code>environment</code>.</p>
-<h2 id="img-srchttpsgithubcomjaviggpecasdocumentacionblancajaviblobmastersrcassetsimagescompodoc-vectorisepngrawtrue-data-canonical-srchttpsgithubcomjaviggpecasdocumentacionblancajaviblobmastersrcassetsimagescompodoc-vectorisepngrawtrue-altcompodoc-titlecompodoc-width150"><img src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/compodoc-vectorise.png?raw=true" data-canonical-src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/compodoc-vectorise.png?raw=true" alt="Compodoc" title="Compodoc" width="150"/></h2>
+<h2 id="img-srchttpsgithubcomjaviggpecasdocumentacionblancajaviblobmastersrcassetsimagescompodoc-vectorisepngrawtrue-data-canonical-srchttpsgithubcomjaviggpecasdocumentacionblancajaviblobmastersrcassetsimagescompodoc-vectorisepngrawtrue-altcompodoc-titlecompodoc-width150"><a href="https://compodoc.app/"><img src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/compodoc-vectorise.png?raw=true" data-canonical-src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/compodoc-vectorise.png?raw=true" alt="Compodoc" title="Compodoc" width="150"/></a></h2>
 <p>Compodoc es un generador de Documentación el cual va a leer los archivos de tu proyecto en Angular y va a generar una Documentación simple y elegante que va contener sus bloques de construcción junto con los comentarios que tengas en los mismos. <a href="https://blog.ng-classroom.com/blog/ionic/compodoc-documentacion_ionic_apps/">Fuente: NG ClassRoom</a></p>
 <p>Para poder realizar la documentación es necesario instalar la librería. (De manera global se instalará para poder usarlo en otros proyectos a futuro)</p>
 <div><pre class="line-numbers"><code class="language-none">npm install -g &#64;compodoc/compodoc</code></pre></div><p>Una vez instalado se ejecuta para generar la documentacion con el comando:</p>
 <div><pre class="line-numbers"><code class="language-none">compodoc -p src/tsconfig.app.json -s</code></pre></div><p>En la carpeta <code>documentation</code> se generará una página con toda la documentación generada por la herramienta compodoc.</p>
-<p>Hay 7 tipos de temas en compodoc (<a href="https://compodoc.app/guides/themes.html">Temas Compodoc</a>):</p>
-<div><pre class="line-numbers"><code class="language-none">- Default (gitbook)
-- Material design
-- Laravel
-- Readthedocs
-- Stripe
-- Vagrant
-- Postmark (postmark)
-- Original (first theme of 2016)    </code></pre></div>
+<p>Hay 6 tipos de temas en compodoc (<a href="https://compodoc.app/guides/themes.html">Temas Compodoc</a>):</p>
+<ul>
+<li>Gitbook (default)</li>
+<li>Laravel (--theme laravel)</li>
+<li>Readthedocs (--theme readthedocs)</li>
+<li>Stripe (--theme stripe)</li>
+<li>Vagrant (--theme vagrant)</li>
+<li>Postmark (--theme postmark)  </li>
+</ul>
+
 
 
 
