--- a/documentation/index.html
+++ b/documentation/index.html
@@ -43,7 +43,7 @@
 <h2 id="url-web-site">URL Web Site</h2>
 <p>La web se encuentra alojada en un servidor propio de este repositorio (GitHub) la url es la siguiente: <a href="https://javiggpecas.github.io/documentacionBlancaJavi">DocumetnacionBlancaJavi</a></p>
 <h2 id="empezando">Empezando</h2>
-<p>Es necesario tener instalado GIT en nuestro PC/MAC para poder realzar el <em>clone</em> del repositorio.</p>
+<p>Es necesario tener instalado GIT en nuestro PC/ñMAC para poder realzar el <em>clone</em> del repositorio.</p>
 <div><pre class="line-numbers"><code class="language-none">git clone https://github.com/javiggpecas/documentacionBlancaJavi.git</code></pre></div><p>Tambien necesitamos instalar <a href="https://nodejs.org/es/">Node JS</a>, luego se instala <a href="https://cli.angular.io/">Angular CLI</a> (<code>npm i @angular/cli</code>) y a continuacion se ejecuta <code>npm i</code> para instalar las librerias que necesita la PWA.</p>
 <p>Ejecute <code>ng serve</code> para iniciar el servidor de desarrollo y navege a <code>http://localhost:4200/</code>.</p>
 <h3 id="building-the-project">Building the project</h3>
@@ -68,9 +68,9 @@
 <h2 id="img-srchttpsgithubcomjaviggpecasdocumentacionblancajaviblobmastersrcassetsimagescompodoc-vectorisepngrawtrue-data-canonical-srchttpsgithubcomjaviggpecasdocumentacionblancajaviblobmastersrcassetsimagescompodoc-vectorisepngrawtrue-altcompodoc-titlecompodoc-width150"><a href="https://compodoc.app/"><img src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/compodoc-vectorise.png?raw=true" data-canonical-src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/compodoc-vectorise.png?raw=true" alt="Compodoc" title="Compodoc" width="150"/></a></h2>
 <p>Compodoc es un generador de Documentación el cual va a leer los archivos de tu proyecto en Angular y va a generar una Documentación simple y elegante que va contener sus bloques de construcción junto con los comentarios que tengas en los mismos. <a href="https://blog.ng-classroom.com/blog/ionic/compodoc-documentacion_ionic_apps/">Fuente: NG ClassRoom</a></p>
 <p>Para poder realizar la documentación es necesario instalar la librería. (De manera global se instalará para poder usarlo en otros proyectos a futuro)</p>
-<div><pre class="line-numbers"><code class="language-none">npm install -g &#64;compodoc/compodoc</code></pre></div><p>Una vez instalado se ejecuta para generar la documentacion con el comando:</p>
+<div><pre class="line-numbers"><code class="language-none">npm install -g &#64;compodoc/compodoc</code></pre></div><p>Una vez instalado se ejecuta para generar la documentacion con el comando (-s = server):</p>
 <div><pre class="line-numbers"><code class="language-none">compodoc -p tsconfig.app.json -s</code></pre></div><p>Se ha creado un comando rapido en package.json <code>npm run compodoc-server</code> el cual ejecuta el comando anteriormente descrito.
-También ha creado un comando rapido en package.json <code>npm run compodoc</code> para generar la documentacion sin necesidad de serverizarlo.</p>
+También el comando <code>npm run compodoc</code> para generar la documentacion sin necesidad de serverizarlo.</p>
 <p>En la carpeta <code>documentation</code> se generará una página con toda la documentación generada por la herramienta compodoc.</p>
 <p>Hay 6 tipos de temas en compodoc (<a href="https://compodoc.app/guides/themes.html">Temas Compodoc</a>):</p>
 <ul>
