--- a/documentation/index.html
+++ b/documentation/index.html
@@ -30,10 +30,8 @@
                <div class="content getting-started">
                    <div class="content-data">
 
-<h1 id="documentacion-blanca-javi">Documentacion Blanca Javi</h1>
-<blockquote>
-<h3 id="página-con-documentación-sobre-tecnologías-front">Página con documentación sobre tecnologías FRONT</h3>
-</blockquote>
+<h1 id="documentación-blanca-javi">Documentación Blanca Javi</h1>
+<h2 id="página-con-documentación-sobre-tecnologías-front">Página con documentación sobre tecnologías FRONT</h2>
 <p><img src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/logo-front.png?raw=true" alt="Front Logo" class="img-responsive" title="Front Logo"></p>
 <h2 id="authors">Authors</h2>
 <ul>
@@ -43,7 +41,7 @@
 <h2 id="url-web-site">URL Web Site</h2>
 <p>La web se encuentra alojada en un servidor propio de este repositorio (GitHub) la url es la siguiente: <a href="https://javiggpecas.github.io/documentacionBlancaJavi">DocumetnacionBlancaJavi</a></p>
 <h2 id="empezando">Empezando</h2>
-<p>Es necesario tener instalado GIT en nuestro PC/ñMAC para poder realzar el <em>clone</em> del repositorio.</p>
+<p>Es necesario tener instalado GIT en nuestro PC/MAC para poder realzar el <em>clone</em> del repositorio.</p>
 <div><pre class="line-numbers"><code class="language-none">git clone https://github.com/javiggpecas/documentacionBlancaJavi.git</code></pre></div><p>Tambien necesitamos instalar <a href="https://nodejs.org/es/">Node JS</a>, luego se instala <a href="https://cli.angular.io/">Angular CLI</a> (<code>npm i @angular/cli</code>) y a continuacion se ejecuta <code>npm i</code> para instalar las librerias que necesita la PWA.</p>
 <p>Ejecute <code>ng serve</code> para iniciar el servidor de desarrollo y navege a <code>http://localhost:4200/</code>.</p>
 <h3 id="building-the-project">Building the project</h3>
@@ -53,7 +51,7 @@
 <p>En la carpeta creada en <code>/dist/nombre-proyecto</code> se ejecuta el siguiente comando para crear un servidor en el pc capaz de ejecutar el compilado:</p>
 <div><pre class="line-numbers"><code class="language-none">http-server -p 8080</code></pre></div><p>Una vez iniciado google chrome se selecciona la opccion instalar en la barra de navegación:</p>
 <p><img src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/install-chrome-pwa.jpg?raw=true" alt="Ejemplo instalar Google Chrome" class="img-responsive" title="Boton Instalar Chrome"></p>
-<h2 id="internet-explorer">Internet Explorer</h2>
+<h2 id="internet-explorer-img-srchttpsuploadwikimediaorgwikipediacommons11finternet_explorer_102b11_computer_iconpng-data-canonical-srchttpsgithubcomjaviggpecasdocumentacionblancajaviblobmastersrcassetsimagescompodoc-vectorisepngrawtrue-altinternet-explorer-titleinternet-explorer-width25">Internet Explorer <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Internet_Explorer_10%2B11_computer_icon.png" data-canonical-src="https://github.com/javiggpecas/documentacionBlancaJavi/blob/master/src/assets/images/compodoc-vectorise.png?raw=true" alt="Internet Explorer" title="Internet Explorer" width="25"/></h2>
 <p>Estan habilitados todos los polyfills necesarios para que la PWA funcione en IE.</p>
 <p>Para poder iniciar la aplicacion en Internet Explorer es necesario ejecutarla en ECMAScript 5 (ES5) mediante el comando:</p>
 <div><pre class="line-numbers"><code class="language-none">ng serve --configuration es5</code></pre></div><p>P.D. Internet Explorer no es compatible con PWA pero la aplicacón se ejecuta con sus limitaciones.</p>
