--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -74,6 +74,8 @@
         <li>
             <b>@angular/service-worker</b> : ~8.2.12</li>
         <li>
+            <b>@compodoc/compodoc</b> : ^1.1.11</li>
+        <li>
             <b>@fortawesome/angular-fontawesome</b> : ^0.5.0</li>
         <li>
             <b>@fortawesome/fontawesome-svg-core</b> : ^1.2.25</li>
