--- a/documentation/modules/SharedModule.html
+++ b/documentation/modules/SharedModule.html
@@ -221,8 +221,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="32"
-                            class="link-to-prism">src/app/shared/shared.module.ts:32</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="34"
+                            class="link-to-prism">src/app/shared/shared.module.ts:34</a></div>
                 </td>
             </tr>
 
@@ -253,6 +253,7 @@ import { RouterModule } from &#x27;@angular/router&#x27;;
 import { CommonModule } from &#x27;@angular/common&#x27;;
 import { AccordionComponent } from &#x27;./components/accordion/accordion.component&#x27;;
 import { MatExpansionModule } from &#x27;@angular/material&#x27;;
+import { TranslateModule } from &#x27;@ngx-translate/core&#x27;;
 
 @NgModule({
   imports: [
@@ -260,7 +261,8 @@ import { MatExpansionModule } from &#x27;@angular/material&#x27;;
     FontAwesomeModule,
     MatProgressSpinnerModule,
     MatExpansionModule,
-    RouterModule
+    RouterModule,
+    TranslateModule
   ],
   declarations: [
     NavBarComponent,
