--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -79,6 +79,18 @@
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
+                <a href=".//functions.html#HttpLoaderFactory">src/app/app.module.ts</a>
+            </td>
+            <td>function</td>
+            <td>HttpLoaderFactory</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/AngularLandingComponent.html">src/app/containers/angular-landing/angular-landing.component.ts</a>
             </td>
             <td>component</td>
@@ -97,7 +109,7 @@
             <td>FormComponentsComponent</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(15/15)</span>
+                <span class="coverage-count">(16/16)</span>
             </td>
         </tr>
         <tr class="very-good">
