--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -84,13 +84,17 @@
         <li>
             <b>@fortawesome/free-solid-svg-icons</b> : ^5.11.2</li>
         <li>
+            <b>@ngx-translate/core</b> : ^11.0.1</li>
+        <li>
+            <b>@ngx-translate/http-loader</b> : ^4.0.0</li>
+        <li>
             <b>angular-animations</b> : 0.0.10</li>
         <li>
             <b>classlist.js</b> : ^1.1.20150312</li>
         <li>
             <b>moment</b> : ^2.24.0</li>
         <li>
-            <b>rxjs</b> : ~6.5.3</li>
+            <b>rxjs</b> : ^6.5.3</li>
         <li>
             <b>tslib</b> : ^1.9.0</li>
         <li>
