--- a/documentation/modules/AngularLandingModule.html
+++ b/documentation/modules/AngularLandingModule.html
@@ -195,7 +195,7 @@ import { SharedModule } from &#x27;src/app/shared/shared.module&#x27;;
   imports: [
     CommonModule,
     SharedModule,
-    AngularLandingRoutingModule
+    AngularLandingRoutingModule,
   ]
 })
 export class AngularLandingModule { }
