--- a/documentation/modules/FormComponentsModule.html
+++ b/documentation/modules/FormComponentsModule.html
@@ -175,6 +175,7 @@ import { FormComponentsComponent } from &#x27;./form-components.component&#x27;;
 import { MatDatepickerModule } from &#x27;@angular/material/datepicker&#x27;;
 import { FormsModule, ReactiveFormsModule } from &#x27;@angular/forms&#x27;;
 import { SharedModule } from &#x27;../../../../shared/shared.module&#x27;;
+import { TranslateModule } from &#x27;@ngx-translate/core&#x27;;
 
 @NgModule({
   declarations: [FormComponentsComponent],
@@ -191,7 +192,8 @@ import { SharedModule } from &#x27;../../../../shared/shared.module&#x27;;
     MatInputModule,
     MatFormFieldModule,
     FormsModule,
-    ReactiveFormsModule
+    ReactiveFormsModule,
+    TranslateModule
   ]
 })
 export class FormComponentsModule { }
