--- a/documentation/miscellaneous/variables.html
+++ b/documentation/miscellaneous/variables.html
@@ -93,7 +93,11 @@
                     <tr>
                         <td class="col-md-4">
                             <i>Default value : </i><code>{
-  production: true
+  production: true,
+  i18nUrl: {
+    prefix: &#x27;./assets/i18n/&#x27;,
+    sufix: &#x27;.json&#x27;
+  }
 }</code>
                         </td>
                     </tr>
@@ -132,7 +136,11 @@
                         <td class="col-md-4">
                             <i>Default value : </i><code>{
 
-  production: false
+  production: false,
+  i18nUrl: {
+    prefix: &#x27;./assets/i18n/&#x27;,
+    sufix: &#x27;.json&#x27;
+  }
 }</code>
                         </td>
                     </tr>
