--- a/documentation/interfaces/IconsFa.html
+++ b/documentation/interfaces/IconsFa.html
@@ -100,6 +100,10 @@
                                 <li>
                                         <a href="#faJsLanding">faJsLanding</a>
                                 </li>
+                                <li>
+                                            <span class="modifier">Optional</span>
+                                        <a href="#faLanguage">faLanguage</a>
+                                </li>
                             </ul>
                         </td>
                     </tr>
@@ -286,6 +290,46 @@
                             </tr>
                         </tbody>
                     </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="faLanguage"></a>
+                                        <span class="name"><b>faLanguage</b><a href="#faLanguage"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>faLanguage:         <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
+
+
+
+
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Languaje icon </p>
+</div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
             </section>
     </div>
 
@@ -293,17 +337,24 @@
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface NavData {
     /** Lnk to go on the web site */
-    link: string;
+    link?: string;
     /** Class to add style */
-    class: string;
+    class?: string;
     /** Class to add style on active link */
-    activateClass: string;
+    activateClass?: string;
     /** Optional icon if there are icon */
     icon?: string;
     /** Optional text if there are text */
     text?: string;
     /** Title of the link */
-    title: string;
+    title?: string;
+    /** List of languajes avaibles in the web site */
+    language?: Array&lt;{
+        /** Text to show in the selector  */
+        text: string;
+        /** LangCode to use in the selector  */
+        code: string;
+    }&gt;;
 }
 
 /** Icons from FontAwesome */
@@ -318,6 +369,8 @@ export interface IconsFa {
     faAngularLanding: any;
     /** JavaScript icon */
     faJsLanding: any;
+    /** Languaje icon */
+    faLanguage?: any;
 }
 </code></pre>
     </div>
